--- a/src/component/RestaurantDashboard/Restaurant.css
+++ b/src/component/RestaurantDashboard/Restaurant.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-
+    padding: 10px;
 }
 .drawer-container{
     width: 14%;
@@ -14,6 +14,7 @@
 
 .restaurants-box{
     display: flex;
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(255, 255, 255);
     width: 75%;
