--- a/src/component/RestaurantDashboard/Restaurant.css
+++ b/src/component/RestaurantDashboard/Restaurant.css
@@ -1,7 +1,7 @@
 .mainSection{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width:auto;
     padding: 10px;
 }
 .drawer-container{
@@ -10,16 +10,4 @@
 
 .left-content-container{
     width: 86%;
-}
-
-.restaurants-box{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(255, 255, 255);
-    width: 75%;
-    margin: 10px;
-    height: 35px;
-    border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
